fixed nav on mobile

--- a/css/application.css
+++ b/css/application.css
@@ -45,7 +45,7 @@ font-family: 'Kadwa', serif;
 }
 
 i {
-	padding: 50px;
+	padding: 30px;
 }
 
 .sub-nav{
